--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+a:active, 
+a:hover,  
+a {
+  text-decoration: none;
+  color: black;
+}
+
 @font-face {
 	font-family: "Brothers"; 
 	src: url("../fonts/BrothersRegular.otf"); 
@@ -23,15 +30,15 @@ body{
 aside{
 	background-color: #d1d3d4;
 	width: 400px;
-	height: 100%;
 }
-section{
+.main{
+	background-color: #fff;
 	width: 1100px;
 	height: 100%;
 }
 
 .my-photo_border{
-	margin: 100px auto;
+	margin: 80px auto;
 	border-radius: 50%;
 	outline: solid #292827 3px;
 	outline-offset: 8px;
@@ -41,7 +48,7 @@ section{
 }
 
 .info{
-	margin: 0px 45px 39px 45px;
+	margin: 0px 45px 90px 45px;
 	font-family: Brothers, sans-serif;
 	font-size: 20px;
 	color: #231f20;
@@ -106,4 +113,196 @@ section{
 	margin: 0 15px 0 0;
 }
 
+.sectcontainer{
+	margin: 0 80px;
+}
 
+header{
+	margin: 65px 0 20px;
+	padding: 0 0 15px;
+	border-bottom: 3px #231f20 solid;
+}
+
+.navlist__item:hover{
+	border-bottom: #231f20 solid 3px;
+}
+
+.title{
+	font-family: Brothers, sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 8px;
+	font-size: 70px;
+	color: #231f20;
+	width: 100px;
+}
+
+ul{
+	margin: 0;
+	padding: 0;
+}
+
+.navlist{
+	height: 30px;
+	display: flex;
+	width: 650px;
+	justify-content: space-between;
+	font-family: 'Times New Roman', Times, serif;
+	text-transform: uppercase;
+	font-size: 25px;
+	color: #231f20;
+}
+
+li{
+	list-style-type: none;
+}
+
+.main-info{
+	
+}
+
+.main-info__header{
+	display: flex;
+	margin: 100px 0 40px;
+}
+
+.main-info__title{
+	font-size: 30px;
+	font-family: Brothers, sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+	color: #231f20;
+}
+
+.main-info__spot{
+	height: 28px;
+	flex-grow: 1;
+	background-color: #e5e5f7;
+   opacity: 0.8;
+   background-size: 6px 6px;
+   background-image: repeating-linear-gradient(45deg, #231f20 0, #231f20 0.9px, #fff 0, #fff 50%);
+	margin: 0 0 6px 10px;
+}
+
+.main-info__text{
+	font-size: 27px;
+	font-family: 'Times New Roman', Times, serif;
+	text-align: justify;
+	color: #231f20;
+}
+
+.main-info__body{
+	border-bottom: 3px #231f20 solid;
+	padding: 0 0 40px;
+}
+
+.main-info__item{
+	margin: 0 0 60px;
+}
+
+.body__list{
+
+}
+
+.list__item{
+	margin: 0 0 20px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.item__appellation{
+	color: #231f20;
+	font-family: Brothers, sans-serif;
+	font-size: 25px;
+	text-transform: uppercase;
+	flex-grow: 1;
+}
+
+.item__indicator{
+	height: 25px;
+	width: 500px;
+	background-color: #e5e5f7;
+   opacity: 0.8;
+   background-size: 6px 6px;
+   background-image: repeating-linear-gradient(45deg, #231f20 0, #231f20 0.9px, #fff 0, #fff 50%);
+	margin: 0 100px 6px 10px;
+	border-radius: 20px;
+}
+
+.indicator__value{
+	background-color: black;
+	height: 25px;
+	width: 500px;
+
+}
+
+.item__data{
+	color: #231f20;
+	font-family: Brothers, sans-serif;
+	font-size: 25px;
+	text-transform: uppercase;
+}
+progress{
+	height: 25px;
+	width: 500px;
+	background-color: #e5e5f7;
+	display: block;
+	margin: 0 100px 6px 10px;
+	border-radius: 20px;
+}
+progress::-webkit-progress-bar{
+   background-size: 6px 6px;
+   background-image: -webkit-repeating-linear-gradient(45deg, #231f20 0, #231f20 0.9px, #fff 0, #fff 50%);
+	border-radius: 20px;
+}
+
+progress::-webkit-progress-value{
+	background-color: black;
+	border-radius: 20px;
+}
+
+.main-info__text_task{
+	font-style: italic;
+}
+
+.key-word{
+	font-weight: bold;
+}
+
+.main-info__code-exp{
+	background-color: #d1d3d4;
+	margin: 20px 0;
+	padding: 20px 20px;
+	font-size: 20px;
+	Line-height:8px;
+}
+
+footer{
+	display: flex;
+	justify-content: space-between;
+	margin: 0 0 40px;
+}
+
+.github-icon__link{
+	height: 50px;
+	width: 50px;
+	display: block;
+	background: url(../img/icon/github.svg) 0 0/auto 100% no-repeat;
+}
+
+.github-icon{
+	margin: 0 0 0 50px;
+}
+.year{
+	font-family: Brothers, sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 5px;
+	font-size: 30px;
+	color: #231f20;
+}
+
+.rs-school-icon__link{
+	display: block;
+	height: 50px;
+	width: 150px;
+	background: url(../img/icon/rs_school_js.svg) 0 0/auto 100% no-repeat;
+}
