--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,12 @@ h1{
 	color: #231f20;
 }
 
+h2{
+	margin: 0;
+	padding: 0;
+	font-size: 30px;
+}
+
 @font-face {
 	font-family: "Brothers"; 
 	src: url("../fonts/BrothersRegular.otf"); 
@@ -169,7 +175,6 @@ li{
 }
 
 .main-info__title{
-	font-size: 30px;
 	font-family: Brothers, sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 5px;
